added memory of day

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,6 +6,7 @@
         xmlns:local="clr-namespace:WPFCalendar"
         mc:Ignorable="d"
         Title="RPG Calendar" Height="450" Width="800"
+        Closing="Window_Closing"
        >
     <TabControl  >
         <TabItem Header="Events" IsTabStop="false">
