--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -25,8 +25,10 @@
 
                 <TextBox ToolTipService.ShowDuration="30000" IsReadOnly="true"  IsTabStop="False" Text="Jakob"  Grid.Row="0" Grid.Column="0" Grid.RowSpan="3" Grid.ColumnSpan="2" Margin="5" Name="tbMainView" MouseDoubleClick="tbMainView_MouseDoubleClick"></TextBox>
                 <Button Grid.Row="3" IsTabStop="false" Grid.Column="0" Grid.ColumnSpan="2" Height="23"  HorizontalAlignment="Center" VerticalAlignment="top" Margin="4,4,150,4"  Width="40" Name="btnPrevious" Opacity="0.75" Content="&lt;" Click="btnPrevious_Click"/>
+                <Button Grid.Row="3" IsTabStop="false" Grid.Column="0" Grid.ColumnSpan="1" Height="23"  HorizontalAlignment="Center" VerticalAlignment="top" Margin="4,4,150,4"  Width="40" Name="btnPriviousFive" Opacity="0.75" Content="&lt;&lt;" Click="btnPriviousFive_Click"/>
                 <Label Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" x:Name="lblpageInformation" HorizontalContentAlignment="Center"  HorizontalAlignment="center" Margin="4" Height="30" Width="100" VerticalContentAlignment="Center" VerticalAlignment="Top" Content="1"/>
                 <Button Grid.Row="3" IsTabStop="false" Grid.Column="0" Grid.ColumnSpan="2" Height="23" Margin="150,4,4,4" HorizontalAlignment="Center" Name="btnNext" VerticalAlignment="Top" Width="40" Content="&gt;"  Opacity="0.75" Click="btnNext_Click"/>
+                <Button Grid.Row="3" IsTabStop="false" Grid.Column="1" Grid.ColumnSpan="1" Height="23" Margin="150,4,4,4" HorizontalAlignment="Center" Name="btnNextFive" VerticalAlignment="Top" Width="40" Content="&gt;&gt;"  Opacity="0.75" Click="btnNextFive_Click" />
 
                 <Grid Grid.Row="0" Grid.Column="2" Grid.RowSpan="4">
                     <Grid.RowDefinitions>
@@ -47,7 +49,37 @@
                 </Grid>
             </Grid>
         </TabItem >
-        <TabItem Header="Characters" IsTabStop="false" Name="tabCharacters"></TabItem>
+        <TabItem Header="End Of Session" IsTabStop="false" Name="tabCharacters">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="1*"></ColumnDefinition>
+                    <ColumnDefinition Width="9*"></ColumnDefinition>
+                    <ColumnDefinition Width="1*"></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition></RowDefinition>
+                    <RowDefinition></RowDefinition>
+                    <RowDefinition></RowDefinition>
+                    <RowDefinition></RowDefinition>
+                    <RowDefinition></RowDefinition>
+                    <RowDefinition></RowDefinition>
+                </Grid.RowDefinitions>
+                <Label Grid.Row="0" Grid.ColumnSpan="2" Grid.Column="0">Where are the Players?</Label>
+                <Label Grid.Row="1" Grid.Column="0">Isabella:</Label>
+                <Label Grid.Row="2" Grid.Column="0">Thomas:</Label>
+                <Label Grid.Row="3" Grid.Column="0">Quang:</Label>
+                <Label Grid.Row="4" Grid.Column="0">Jimmy:</Label>
+                <Label Grid.Row="5" Grid.Column="0">Chopart:</Label>
+                <RichTextBox GotKeyboardFocus="gotsMeSomeFocus" GotFocus="gotsMeSomeFocus" x:Name="IsaLocation" Grid.Row="1" Grid.Column="1"></RichTextBox>
+                <RichTextBox GotKeyboardFocus="gotsMeSomeFocus" GotFocus="gotsMeSomeFocus" x:Name="ThomasLocation" Grid.Row="2" Grid.Column="1"></RichTextBox>
+                <RichTextBox GotKeyboardFocus="gotsMeSomeFocus" GotFocus="gotsMeSomeFocus" x:Name="QuangLocation" Grid.Row="3" Grid.Column="1"></RichTextBox>
+                <RichTextBox GotKeyboardFocus="gotsMeSomeFocus" GotFocus="gotsMeSomeFocus" x:Name="JimmyLocation" Grid.Row="4" Grid.Column="1"></RichTextBox>
+                <RichTextBox GotKeyboardFocus="gotsMeSomeFocus" GotFocus="gotsMeSomeFocus" x:Name="ChopartLocation" Grid.Row="5" Grid.Column="1"></RichTextBox>
+                <Button Margin="10" Grid.Row="0" Grid.Column="2" Click="btnCommitLocations" >Commit</Button>
+            </Grid>
+            
+
+        </TabItem>
         <TabItem Header="Locations" IsTabStop="False" Name="tabLocations"></TabItem>
         <TabItem Header="RightClickMe" IsTabStop="False" Name="tabTimeLine" MouseRightButtonDown="tabTimeLine_MouseRightButtonDown" ></TabItem>
     </TabControl>
